Добавлена кнопка удаления редактируемой фигуры.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">OchEv</string>
     <string name="clearButtonName">Clear</string>
+    <string name="deleteButtonName">Delete</string>
 </resources>
